[package]
name = "hashi"
description = "WASM utilities"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
homepage = "https://github.com/ferreira-tb/hashi"
repository = "https://github.com/ferreira-tb/hashi"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
categories = ["external-ffi-bindings", "wasm"]

[dependencies]
futures = "0.3"
js-sys = "0.3"
num-traits = "0.2"
serde = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Headers",
  "HtmlBodyElement",
  "HtmlElement",
  "HtmlHeadElement",
  "Location",
  "MouseEvent",
  "MouseEventInit",
  "MutationObserver",
  "MutationObserverInit",
  "MutationRecord",
  "Node",
  "NodeList",
  "Request",
  "Response",
  "Window",
  "console",
]

[lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1
